--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -97,9 +97,9 @@
             </div>
         </section>
         <section id="praw">
-            <p>MACIEJ</p>
+            <p>JAKUB</p>
             <p class="sub">Imię (Imiona)</p><br>
-            <p>KRAWCZYK</p>
+            <p>SZYJER</p>
             <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
@@ -133,7 +133,7 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе</p>
-                <p class="main">BUKOWSKI</p>
+                <p class="main">SZYJER</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -143,7 +143,7 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе ojca</p>
-                <p class="main">BUKOWSKI</p>
+                <p class="main">SZYJER</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
